In this commit, I added Framer Motion to the Contact form and About card.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     -->
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.counterup/1.0.4/jquery.counterup.min.js"></script>
+
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
